# cch-drf-vue

./: README.md  pyproject.toml
api/: views.py
api2/: serializers.py  urls.py  views.py
db/: db.sqlite3
mysite/: settings.py  urls.py
